--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,20 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="white">#FFFFFFFF</color>
-    <color name="light_grey">#ededff</color>
-    <color name="light_grey_alpha">#40ededff</color>
-    <color name="dark_grey">#555577</color>
+    <color name="default_text">#000000</color>
     <color name="button">#000044</color>
-    <color name="background">#f1f1ff</color>
-    <color name="light_black">#343455</color>
     <color name="warn_red">#ff00ee</color>
     <color name="highlight">#a642f0</color>
     <color name="hyperlink">#5f0072</color>
+    <color name="light_black">#343455</color>
+    <color name="dark_grey">#555577</color>
     <color name="ijblue">#1b2c66</color>
+    <color name="ijred">#550000</color>
+    <color name="ijgreen">#104422</color>
+    <color name="ijyellow">#c7a700</color>
+    <color name="statusbar_back">@color/ijblue</color>
+    <color name="background_default">#f1f1ff</color>
+    <color name="background">@color/background_default</color>
+    <color name="background1">#ffcccc</color>
+    <color name="background2">#bbddbb</color>
+    <color name="background3">#ffffbb</color>
+    <color name="background_list">@color/background</color>
+    <color name="background_list1">@color/background1</color>
+    <color name="background_list2">@color/background2</color>
+    <color name="background_list3">@color/background3</color>
+    <color name="light_grey_default">#ededff</color>
+    <color name="light_grey">@color/light_grey_default</color>
+    <color name="light_grey1">#ffd0d0</color>
+    <color name="light_grey2">#bfdfbf</color>
+    <color name="light_grey3">#fefeaf</color>
+    <color name="light_grey_alpha">#40ededff</color>
+    <color name="light_grey_alpha1">#40ffd0d0</color>
+    <color name="light_grey_alpha2">#40bfdfbf</color>
+    <color name="light_grey_alpha3">#40fefeaf</color>
+    <color name="light_grey_statusbar">@color/light_grey</color>
+    <color name="light_grey_statusbar_alpha">@color/light_grey_alpha</color>
+    <color name="pack_color_background_highlight">#aabbff</color>
+    <color name="pack_color_background_highlight1">#ff9999</color>
+    <color name="pack_color_background_highlight2">#aaffbb</color>
+    <color name="pack_color_background_highlight3">#ffff77</color>
+    <color name="pack_color_list">#000020</color>
+    <color name="pack_color_list1">#5a0000</color>
+    <color name="pack_color_list2">#003a00</color>
+    <color name="pack_color_list3">#503f00</color>
+    <color name="pack_default_item_stroke">#555555</color>
+    <color name="pack_default_item_background">#b9b9b9</color>
+    <color name="pack_default_item_background_alpha">#4bb9b9b9</color>
     <color name="dark_red">#550000</color>
     <color name="light_red">#ec7070</color>
     <color name="dark_green">#005500</color>
     <color name="light_green">#70ec70</color>
+    <color name="media_button_background">#4d595977</color>
+    <color name="media_button_stroke">#555588</color>
     <color name="progress0">#ff0000</color>
     <color name="progress1">#ee5500</color>
     <color name="progress2">#eecc00</color>
