--- a/app/src/main/res/drawable/dia_view_title_background.xml
+++ b/app/src/main/res/drawable/dia_view_title_background.xml
@@ -7,7 +7,7 @@
     </item>
     <item android:bottom="2dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/light_grey" />
+            <solid android:color="@color/light_grey_default" />
         </shape>
     </item>
 </layer-list>
