--- a/app/src/main/res/layout/activity_edit_card_media.xml
+++ b/app/src/main/res/layout/activity_edit_card_media.xml
@@ -2,7 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
     android:gravity="top">
 
     <ScrollView
@@ -17,7 +16,7 @@
 
             <Button
                 android:id="@+id/add_media_button"
-                style="@style/material_button"
+                style="@style/media_button"
                 android:layout_margin="12dp"
                 android:text="@string/edit_card_media_add"
                 android:textSize="16sp" />
