--- a/app/src/main/res/layout/activity_view_card.xml
+++ b/app/src/main/res/layout/activity_view_card.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
     android:gravity="center"
     android:padding="10dp">
 
@@ -24,7 +23,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
                 android:gravity="center"
-                android:textColor="@android:color/black"
+                android:textColor="@color/default_text"
                 android:textIsSelectable="true"
                 android:textSize="@dimen/card_front_size_default" />
 
@@ -34,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="40dp"
                 android:gravity="center"
-                android:textColor="@android:color/black"
+                android:textColor="@color/default_text"
                 android:textIsSelectable="true"
                 android:textSize="@dimen/card_back_size_default" />
 
@@ -51,7 +50,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
-                android:background="@color/light_grey"
                 android:orientation="vertical"
                 android:padding="15dp">
 
@@ -62,7 +60,7 @@
                     android:layout_marginBottom="5dp"
                     android:gravity="center"
                     android:text="@string/card_known"
-                    android:textColor="@android:color/black" />
+                    android:textColor="@color/default_text" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
