--- a/app/src/main/res/layout/activity_view_collection_or_pack.xml
+++ b/app/src/main/res/layout/activity_view_collection_or_pack.xml
@@ -2,7 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
     android:gravity="center">
 
     <ScrollView
@@ -22,7 +21,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:gravity="center"
-                android:textColor="@android:color/black"
+                android:textColor="@color/default_text"
                 android:textSize="@dimen/details_name_size_default" />
 
             <TextView
@@ -31,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="40dp"
                 android:gravity="center"
-                android:textColor="@android:color/black"
+                android:textColor="@color/default_text"
                 android:textSize="@dimen/details_desc_size_default" />
 
             <TextView
