--- a/app/src/main/res/layout/dia_export.xml
+++ b/app/src/main/res/layout/dia_export.xml
@@ -2,7 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
     android:gravity="center"
     android:theme="@style/Theme.RBV">
 
@@ -13,8 +12,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/background">
+            android:layout_height="wrap_content">
 
             <CheckBox
                 android:id="@+id/dia_export_include_settings"
