--- a/app/src/main/res/layout/dia_query.xml
+++ b/app/src/main/res/layout/dia_query.xml
@@ -26,7 +26,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
                 android:gravity="center"
-                android:textColor="@android:color/black"
+                android:textColor="@color/default_text"
                 android:textIsSelectable="true"
                 android:textSize="@dimen/card_front_size_default" />
 
@@ -43,7 +43,7 @@
                 android:layout_marginBottom="40dp"
                 android:gravity="center"
                 android:padding="15dp"
-                android:textColor="@android:color/black"
+                android:textColor="@color/default_text"
                 android:textIsSelectable="true"
                 android:textSize="@dimen/card_front_size_default" />
 
@@ -122,7 +122,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
-        android:background="@color/light_grey"
+        android:background="@color/light_grey_default"
         android:importantForAccessibility="no"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_outline_skip_next_24"
@@ -133,7 +133,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
-        android:background="@color/light_grey"
+        android:background="@color/light_grey_default"
         android:importantForAccessibility="no"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_outline_skip_previous_24"
