--- a/app/src/main/res/layout/rec_view_small.xml
+++ b/app/src/main/res/layout/rec_view_small.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="start"
-            android:textColor="@android:color/black"
+            android:textColor="@color/default_text"
             android:textSize="17sp" />
 
         <TextView
