--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -14,6 +14,7 @@
     <color name="ijyellow">#fff0aa</color>
     <color name="statusbar_back">#020123</color>
     <color name="background_default">#090913</color>
+    <color name="icon_background">#f1f1ff</color><!-- day theme value -->
     <color name="background">#232350</color>
     <color name="background1">#592020</color>
     <color name="background2">#234923</color>
