--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="ijyellow">#c7a700</color>
     <color name="statusbar_back">@color/ijblue</color>
     <color name="background_default">#f1f1ff</color>
+    <color name="icon_background">@color/background_default</color>
     <color name="background">@color/background_default</color>
     <color name="background1">#ffcccc</color>
     <color name="background2">#bbddbb</color>
