improve dark mode

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="white">#FF000000</color>
-    <color name="default_text">#d0d0ef</color>
+    <color name="default_text">#c7c7d0</color>
     <color name="button">#ccccff</color>
     <color name="warn_red">#ff00ee</color>
-    <color name="highlight">#d0a9ff</color>
+    <color name="highlight">#d9b0ef</color>
     <color name="hyperlink">#ee79ee</color>
     <color name="light_black">#cccccc</color>
     <color name="dark_grey">#99999f</color>
@@ -15,29 +15,33 @@
     <color name="statusbar_back">#020123</color>
     <color name="background_default">#090913</color>
     <color name="icon_background">#f1f1ff</color><!-- day theme value -->
-    <color name="background">#232350</color>
-    <color name="background1">#592020</color>
-    <color name="background2">#234923</color>
-    <color name="background3">#505010</color>
+    <color name="background">#191740</color>
+    <color name="background1">#400c0c</color>
+    <color name="background2">#133113</color>
+    <color name="background3">#494502</color>
+    <color name="background_query">#232350</color>
+    <color name="background_query1">#592020</color>
+    <color name="background_query2">#234923</color>
+    <color name="background_query3">#505000</color>
     <color name="background_list">#02021e</color>
     <color name="background_list1">#1e0202</color>
     <color name="background_list2">#021e02</color>
     <color name="background_list3">#1d1d02</color>
-    <color name="light_grey_default">#242030</color>
-    <color name="light_grey">#34346f</color>
-    <color name="light_grey1">#6f3434</color>
-    <color name="light_grey2">#305530</color>
-    <color name="light_grey3">#696930</color>
+    <color name="light_grey_default">#100e13</color>
+    <color name="light_grey">#201957</color>
+    <color name="light_grey1">#5a1010</color>
+    <color name="light_grey2">#204020</color>
+    <color name="light_grey3">#504503</color>
     <color name="light_grey_alpha">#20030333</color>
     <color name="light_grey_alpha1">#20330303</color>
     <color name="light_grey_alpha2">#20033303</color>
     <color name="light_grey_alpha3">#20333303</color>
     <color name="light_grey_statusbar">#ededff</color>
     <color name="light_grey_statusbar_alpha">#40ededff</color>
-    <color name="pack_color_background_highlight">@color/light_grey</color>
-    <color name="pack_color_background_highlight1">@color/light_grey1</color>
-    <color name="pack_color_background_highlight2">@color/light_grey2</color>
-    <color name="pack_color_background_highlight3">@color/light_grey3</color>
+    <color name="pack_color_background_highlight">#34346f</color>
+    <color name="pack_color_background_highlight1">#6f3434</color>
+    <color name="pack_color_background_highlight2">#305530</color>
+    <color name="pack_color_background_highlight3">#65650f</color>
     <color name="pack_color_list">#a0a0d4</color>
     <color name="pack_color_list1">#d4a0a0</color>
     <color name="pack_color_list2">#a0d4a0</color>
