--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -145,13 +145,45 @@
                     android:textColor="@color/light_black"
                     android:textSize="16sp" />
 
-                <CheckBox
-                    android:id="@+id/settings_ui_dark_mode"
+
+                <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/settings_ui_dark_mode"
+                    android:paddingTop="10dp"
+                    android:text="@string/settings_ui_mode"
                     android:textColor="@color/light_black"
                     android:textSize="16sp" />
+
+                <RadioGroup
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:orientation="vertical">
+
+                    <RadioButton
+                        android:id="@+id/settings_ui_mode_auto"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/settings_ui_mode_auto"
+                        android:textColor="@color/light_black"
+                        android:textSize="16sp" />
+
+                    <RadioButton
+                        android:id="@+id/settings_ui_mode_day"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/settings_ui_mode_day"
+                        android:textColor="@color/light_black"
+                        android:textSize="16sp" />
+
+                    <RadioButton
+                        android:id="@+id/settings_ui_mode_night"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/settings_ui_mode_night"
+                        android:textColor="@color/light_black"
+                        android:textSize="16sp" />
+                </RadioGroup>
             </LinearLayout>
 
             <View
