--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -23,6 +23,7 @@
                 android:textSize="20sp" />
 
             <RadioGroup
+                android:id="@+id/settings_sort"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -155,6 +156,7 @@
                     android:textSize="16sp" />
 
                 <RadioGroup
+                    android:id="@+id/settings_ui_mode"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
