--- a/app/src/main/res/menu/menu_view_card.xml
+++ b/app/src/main/res/menu/menu_view_card.xml
@@ -2,40 +2,39 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/menu_view_card_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:icon="@drawable/baseline_edit_24"
-        android:onClick="editCard"
         android:orderInCategory="100"
         android:title="@string/edit"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/menu_view_card_delete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:icon="@drawable/baseline_delete_24"
-        android:onClick="deleteCard"
         android:orderInCategory="200"
         android:title="@string/delete"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/menu_view_card_edit_media"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="editCardMedia"
         android:orderInCategory="300"
         android:title="@string/edit_card_media"
         app:showAsAction="never" />
     <item
+        android:id="@+id/menu_view_card_print"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="printCard"
         android:orderInCategory="400"
         android:title="@string/print"
         app:showAsAction="never" />
     <item
-        android:id="@+id/move_card"
+        android:id="@+id/menu_view_card_move"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="moveCard"
         android:orderInCategory="500"
         android:title="@string/move"
         app:showAsAction="never" />
